Hopefully fix vertical height glitch
Initial load on mobile (from new github pages deployment)
wrongly calculated vertical height, and page content was
too low. User interaction caused a reflow and fixed.
Now force reflow on load.
Also don't use vh (buggy?)

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
     font-family: sans-serif;
     font-size: 32px;
     font-weight: 700;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     display: flex;
     flex-flow: column nowrap;
